[package]
description = "OpenEthereum Keys Generator"
name = "ethkey"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
edit-distance = "2.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
parity-crypto = { version = "0.6.1", features = ["publickey"] }
parity-wordlist = "1.3.1"
keccak-hash = "0.5.0"
rlp = "0.4.5"
ethereum-types = "0.9.0"
